--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@stripe/terminal-js": "^0.11.2",
     "bootstrap": "^5.3.0-alpha3",
     "rxjs": "~7.8.0",
     "stripe": "^12.1.1",
@@ -49,7 +50,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "stripe": "^12.0.0"
+      "stripe": "^12.0.0",
+      "express": "^4.17.1"
     }
   }
 }
